alignment and responsiveness fixed

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -5,20 +5,10 @@
 }
 
 body {
-    margin-top: 25px;
-    margin-left: 50px;
+    margin: 25px 25px 25px 25px;
+
 }
 
-#left-column {
-    padding: 0px !important;
-}
-
-#reminder-window {
-    color: grey;
-    width: 100%;
-    height: 80px;
-    border: 2px solid rgb(127, 148, 130);
-}
 
 #display-reminder {
     font-family: korolev-compressed, sans-serif;
@@ -30,14 +20,13 @@ body {
     padding: 20px;
 }
 
-/*#gif {
+#gif {
     width: 370px;
     height: 190px;
     border: solid black;
     border-width: 1px;
-    background-color:  rgb(209, 196, 190);
     box-shadow: 0 0.5rem 1rem  rgb(65, 63, 62);
-}*/
+}
 
 #gif-display {
     font-family: korolev-compressed, sans-serif;
@@ -49,4 +38,16 @@ body {
     justify-content: center;
     padding: 60px;
 }
+
+#randomFact {
+    height: 55px;
+    width: 100%;
+    border: dotted rgb(163, 159, 159);
+    border-radius: 10px;
+    border-width: 1px;
+    display:inline-block;
+    margin-top: 30px;
+}
+
+
 
